# readme_patcher

./: .gitignore  CHANGELOG.md  Makefile  README.rst  README_template.rst  debug.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  tests.yml
readme_patcher/: __init__.py  badge.py  badges.py  file.py  filters.py  functions.py  github.py  project.py  py_project.py  template.py
tests/: helper.py  test_badge.py  test_class_project.py  test_filters.py  test_functions.py  test_github.py  test_jinja.py  test_project.py  test_readme_patcher.py
tests/files/include/: python-snippet.py  python-snippet.rst
tests/files/project/: README.rst
tests/files/project/badge/: readthedocs_template.rst
tests/files/project_uv/: pyproject.toml
