[tool.poetry]
name = "readme_patcher"
version = "0.1.0"
description = "Generate README files from templates. Allow input from functions calls and cli output."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
repository = "https://github.com/Josef-Friedrich/readme_patcher"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"
