[project]
name = "readme_patcher"
version = "0.7.2"
description = "Generate README files from templates. Allow input from functions calls and cli output."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10"
readme = "README.rst"
license = "MIT"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "jinja2>=3.1.6",
    "pyproject-parser>=0.14.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20260107",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/readme_patcher"

[project.scripts]
readme-patcher = "readme_patcher:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "responses>=0.25.8",
    "ruff>=0.14.14",

]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
